--- a/pagedemo/src/components/Login/login.css
+++ b/pagedemo/src/components/Login/login.css
@@ -40,15 +40,15 @@ body {
 
 .login_text {
   margin-left: 100px;
-  margin-top: 100px;
+  margin-top: 170px;
   font-family: poppins;
   color: white;
-  font-size: 20px;
+  font-size: 19px;
 }
 
 .login_text h1 {
   font-family: poppins;
-  font-size: 65px;
+  font-size: 60px;
   color: white;
 }
 
@@ -160,6 +160,7 @@ body {
 .signup_cards input {
   border: none;
   border-bottom: 1px solid;
+  outline: none;
   max-width: 100%;
   padding-left: 10px;
   padding-bottom: 4px;
@@ -210,8 +211,8 @@ body {
 }
 
 .signup_cards .signuplink {
-  text-align: center;
   padding-top: 20px;
+  text-align: center;
 }
 
 .signup_cards .signuplink a {
