--- a/pagedemo/src/components/Parolpage/parol.css
+++ b/pagedemo/src/components/Parolpage/parol.css
@@ -52,7 +52,7 @@ body {
   color: white;
 }
 
-.signup_cards {
+.login_cards {
   background-color: white;
   -webkit-box-shadow: 10px 30px 25px rgba(0, 0, 0, 0.5);
           box-shadow: 10px 30px 25px rgba(0, 0, 0, 0.5);
@@ -70,23 +70,23 @@ body {
           align-items: center;
 }
 
-.signup_cards input {
+.login_cards input {
   border: none;
-  outline: none;
   border-bottom: 1px solid;
-  width: 320px;
-  padding-left: 10px;
+  outline: none;
+  width: 370px;
+  padding-left: 5px;
   padding-bottom: 4px;
   margin-top: 30px;
   font-family: poppins;
 }
 
-.signup_cards form {
+.login_cards form {
   position: relative;
   text-align: center;
 }
 
-.signup_cards .loginbtn {
+.login_cards .loginbtn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -99,13 +99,51 @@ body {
   margin-top: 60px;
 }
 
-.signup_cards .loginbtn button {
+.login_cards .loginbtn button {
   background-color: #131C38;
-  color: white;
   padding: 14px 36px;
   border-radius: 8px;
   border: none;
   font-family: poppins;
+}
+
+.login_cards .loginbtn button a {
+  text-decoration: none;
+  color: white;
+}
+
+.login_cards .code p {
+  color: #D20A11;
+  font-weight: 500;
+  font-size: 12px;
+  padding-top: 28px;
+}
+
+.login_cards .codes p {
+  color: #D20A11;
+  font-weight: 500;
+  font-size: 12px;
+  margin: 0;
+  padding: 4px 0px 0px 5px;
+  text-align: start;
+}
+
+.login_cards .tesdiq {
+  padding-top: 20px;
+}
+
+.login_cards .tesdiq a {
+  text-decoration: none;
+  color: #131C38;
+  font-weight: 500;
+  font-size: 12px;
+  -webkit-transition: .3s ease-in-out;
+  transition: .3s ease-in-out;
+}
+
+.login_cards .tesdiq a:hover {
+  color: black;
+  font-weight: 700;
 }
 
 .ull {
@@ -134,4 +172,4 @@ body {
   width: 100px;
   height: 50px;
 }
-/*# sourceMappingURL=signup.css.map */
+/*# sourceMappingURL=parol.css.map */
